[pom] Add java.deskop to add modules