@@ -128,6 +128,8 @@
           <configuration>
             <additionalOptions combine.children="append">
               <option>--add-modules</option>
+              <option>java.desktop</option>
+              <option>--add-modules</option>
               <option>java.sql</option>
             </additionalOptions>
           </configuration>
